# cmp425-networking

./: .gitignore  CMakeLists.txt  README.md  SConstruct
resources/assets/textures/tileset/: template.aseprite
resources/data/default/: tiles.json
src/client/: CMakeLists.txt  client.cpp  client.h  window.cpp  window.h
src/client/assets/: asset_id.cpp  asset_id.h  asset_manager.cpp  asset_manager.h
src/client/camera/: camera.cpp  camera.h  camera_manager.cpp  camera_manager.h
src/client/debug/: debug_system.cpp  debug_system.h
src/client/input/: actions.h  input_action.cpp  input_action.h  input_aliases.h  input_manager.cpp  input_manager.h
src/client/player/: interaction_system.cpp  interaction_system.h
src/client/render/: camera.cpp  camera.h  draw_layers.h  render_manager.cpp  render_manager.h
src/common/: CMakeLists.txt  cli.h  console.cpp  console.h  game_loop.cpp  game_loop.h
src/common/actor/: actor.cpp  actor.h  actor_manager.cpp  actor_manager.h  interpolation.h  networked_actor.cpp  networked_actor.h  player_actor.cpp  player_actor.h
src/common/cli/: components.cpp  components.h  handle.h
src/common/console/: contexts.h  print.cpp  print.h
src/common/data/: data_manager.cpp  data_manager.h  definitions.h  namespaced_id.cpp  namespaced_id.h
src/common/data/definitions/: item.h  tile.h
src/common/data/handle/: handles.cpp  item.h  tile.h
src/common/maths/: rect.h
src/common/network/: address.cpp  address.h  network_id.cpp  network_id.h  network_manager.cpp  network_manager.h  networked.cpp  networked.h  packet.cpp  packet.h
src/common/render/: drawable.cpp  drawable.h
src/common/save/: save_manager.cpp  save_manager.h
src/common/system/: system.cpp  system.h  system_manager.cpp  system_manager.h
src/common/terrain/: chunk.cpp  chunk.h  tile.cpp  tile.h  tile_shape.h  tile_type.cpp  tile_type.h  tiles.h  world.cpp  world.h
src/common/util/: ansi.h  console.cpp  console.h  glaze_prelude.h  prelude.h  primitive_aliases.h  singleton.h  std_aliases.h  vec.h  vec_convert.h
src/common/util/console/: ansi.cpp
src/common/util/helper/: enum_serialization.h  format.h  glaze_enum_helper.h  singleton.h
src/common/util/macro/: get_arg.h  remove_parentheses.h  rep.h  value_if.h
src/common/util/stream/: sfvec.h  vec.h
src/common/world/: chunk.cpp  chunk.h  coord_helpers.cpp  coord_helpers.h  level.cpp  level.h  tile_layer.h  world.cpp  world.h  world_manager.cpp  world_manager.h
src/server/: CMakeLists.txt  server.cpp
src/shared/: shared_test_class.cpp  shared_test_class.h  test.cpp  test.h  util.h
src/util/: prelude.h
src/util/alias/: array.h  bag.h  bitset.h  chrono.h  compare.h  concepts.h  filesystem.h  function.h  map.h  opt.h  opt_ref.h  ranges.h  result.h  set.h  smart_pointers.h  str.h  thread.h  utility.h  variant.h  vec.h
src/util/alias/SFML/: graphics.h  network.h  vec.h
src/util/prelude/: containers.h  data_definition.h  filesystem.h  format.h  opt.h  variant.h  vec.h
src/util/util/: construct_markers.h  vec_convert.h
src/util/util/format/: optional_or.h
src/util/util/format/SFML/: network.h
src/util/util/helper/: cpp.hint  demangle.h  enum_serialization.h  format.h  glaze_enum_helper.h  singleton.h
src/util/util/macro/: arg_count.h  get_arg.h  token_paste.h  wrap.h
